--- a/04-missing.Rmd
+++ b/04-missing.Rmd
@@ -1,1 +1,10 @@
 # Missing values
+
+Country Policy Orders: There are a few missing values county, zip_code, and total phases. This is because some states do not have details about counties. Hence there is no zip code and country details. In addition, most instances do not have total phases.
+
+Hospitalization: There are some 0 values that may be missing values in our dataset.
+
+Airlines Covid Data: There are no values missing in our dataset. 
+
+Restaurant data: There are many missing values in the dataset before May 2020. We also need to extract data for US.
+
