--- a/02-data.Rmd
+++ b/02-data.Rmd
@@ -2,22 +2,29 @@
 
 
 ## Requirement 
-Write a draft of the [Data Sources chapter](https://edav.info/project#report-format).
-Describe the data sources: who is responsible for collecting the data? How is it collected? If there were a choice of options, explain how you chose.
-Provide some basic information about the dataset: types of variables, number of records, etc.
-Describe any issues / problems with the data, either known or that you discover.
-(suggested: approximately 1 page)
+Write a draft of the [Data Sources chapter](https://edav.info/project#report-format). \ 
+
+Describe the data sources: who is responsible for collecting the data? How is it collected? If there were a choice of options, explain how you chose. \ 
+
+Provide some basic information about the dataset: types of variables, number of records, etc. Describe any issues / problems with the data, either known or that you discover. (suggested: approximately 1 page)
 
 ## Country Policy Orders
 *Data Source*: 
-https://healthdata.gov/dataset/covid-19-state-and-county-policy-orders
+https://healthdata.gov/dataset/covid-19-state-and-county-policy-orders 
+
+### Description 
 This is a federal government website managed by the U.S. Department of Health & Human Services. This data is a manually curated dataset that provides a standardized view into state and county policy orders (executive orders, ordinances, etc.) from the following sources:
 BU COVID-19 State Policy Database - Raifman J, Nocka K, Jones D, Bor J, Lipson S, Jay J, and Chan P. (2020). "COVID-19 US state policy database."
-wikidata - Stay At Home Policies Queried from WikiData
-Manual curation by a dedicated group of Virtual Student Federal Service Interns - Summer 2020: T Adler, J Bastian, L Beckett, M Cohen, K Honey, C Kennedy, E Nudell
+wikidata - Stay At Home Policies Queried from WikiData. \
+
+Manual curation by a dedicated group of Virtual Student Federal Service Interns - Summer 2020: T Adler, J Bastian, L Beckett, M Cohen, K Honey, C Kennedy, E Nudell. \ 
+
 We chose this dataset over the BU google form linked in the sources because this dataset is much more consolidated. In addition, the website seems more reputable because it is from the government.
 
-*Basic Information about Dataset*: The dataset has categories: State, county, zip code, policy level, date, start stop, comments, source, total phases. There are 3507 instances. The details are as below taken from their dictionary (https://healthdata.gov/covid-19-state-and-county-policy-orders-data-dictionary):
+### Basic Information about Dataset: 
+
+The dataset has categories: State, county, zip code, policy level, date, start stop, comments, source, total phases. There are 3507 instances. The details are as below taken from their dictionary (https://healthdata.gov/covid-19-state-and-county-policy-orders-data-dictionary): \ 
+
 state_id (string): The two digit state code for the policy change
 county (optional string): The county name where the policy change was implemented. Optional due to counties occasionally implementing their own policies.
 
@@ -40,14 +47,19 @@ total_phases (integer): As some states shifted to reopening policies, this colum
 
 ## Hospitalization Data
 *Data Source*: 
-https://healthdata.gov/dataset/covid-19-estimated-patient-impact-and-hospital-capacity-state
+https://healthdata.gov/dataset/covid-19-estimated-patient-impact-and-hospital-capacity-state \ 
 
 https://healthdata.gov/dataset/covid-19-reported-patient-impact-and-hospital-capacity-state
 
-This is a federal government website managed by the U.S. Department of Health & Human Services. The following dataset provides state-aggregated data for hospital utilization. These are derived from reports with facility-level granularity across two main sources: (1) HHS TeleTracking, and (2) reporting provided directly to HHS Protect by state/territorial health departments on behalf of their healthcare facilities. The file will be updated daily and provides the latest values reported by each facility within the last four days. This allows for a more comprehensive picture of the hospital utilization within a state by ensuring a hospital is represented, even if they miss a single day of reporting.
+### Description 
+
+This is a federal government website managed by the U.S. Department of Health & Human Services. The following dataset provides state-aggregated data for hospital utilization. These are derived from reports with facility-level granularity across two main sources: (1) HHS TeleTracking, and (2) reporting provided directly to HHS Protect by state/territorial health departments on behalf of their healthcare facilities. The file will be updated daily and provides the latest values reported by each facility within the last four days. This allows for a more comprehensive picture of the hospital utilization within a state by ensuring a hospital is represented, even if they miss a single day of reporting. \ 
+
 We chose this dataset because it is from a very official source and is consolidated rather than its sources.
 
-*Basic Information on this dataset*: They are all numerical values. Some percentages and some numbers. There are 60 different columns and 54 instances. Details of all the columns are listed in this dictionary
+### Basic Information on this dataset: 
+
+They are all numerical values. Some percentages and some numbers. There are 60 different columns and 54 instances. Details of all the columns are listed in this dictionary
 (https://healthdata.gov/covid-19-reported-patient-impact-and-hospital-capacity-state-data-dictionary) Some examples are listed below:
 
 state: The two digit state code
@@ -78,21 +90,24 @@ reporting_cutoff_start: Look back date start - The latest reports from each hosp
 ## Restaurant data :
 *Data source* 
 https://www.opentable.com/state-of-industry
-### About the data
-The data indexes two things.
-First, the overall impact of Covid 19 on the industry by showing year-over-year seated diners at a sample of restaurants on the OpenTable network across all channels: online reservations, phone reservations, and walk-ins. For year-over-year comparisons by day, we compare to the same day of the week from the same week in the previous year. For example, we’d compare Tuesday of week 11 in 2020 to Tuesday of week 11 in 2019. Only states or metros with 50+ restaurants on the OpenTable network for 2019 or 2020 are included in the sample. To better reflect the state of the industry overall, this dataset is based on a sample of approximately 20,000 restaurants that provide OpenTable with information on all of their inventory. This sample of restaurants typically accounts for a majority of our seated online reservations.
+
+### Description 
+The data indexes two things. \ 
+First, the overall impact of Covid 19 on the industry by showing year-over-year seated diners at a sample of restaurants on the OpenTable network across all channels: online reservations, phone reservations, and walk-ins. For year-over-year comparisons by day, we compare to the same day of the week from the same week in the previous year. For example, we’d compare Tuesday of week 11 in 2020 to Tuesday of week 11 in 2019. Only states or metros with 50+ restaurants on the OpenTable network for 2019 or 2020 are included in the sample. To better reflect the state of the industry overall, this dataset is based on a sample of approximately 20,000 restaurants that provide OpenTable with information on all of their inventory. This sample of restaurants typically accounts for a majority of our seated online reservations.\ 
 Second, a comparison of year-over-year seated covers to demonstrate where we are seeing recovery start to take shape. This table shows year-over-year seated covers across all channels at only the restaurants that have chosen to reopen in a given market. As an example, if there were 50 seated covers in restaurants that have recently reopened in a given locale on May 11, 2019 and on the same day in 2020 there was 1, then 2% will be displayed. For this chart, only markets with 500+ restaurants on OpenTable of which 10%+ are accepting online reservations are included.
  
 ## Airlines Data 
 *Data source* 
 https://www.bts.gov/data-spotlight/airlines-july-operations
-### About the data
-This airlines data is from the Bureau of Transportation Statistics. The BTS is part of the Department of Transportation and is the main source of data on many different transportation factors such as commercial aviation, transportation economics, and freight activity. The data provided on this website is collected from the Bureau’s National Transportation Library, which contains many different publications and information about the transportation community. We chose this dataset because it provides valuable information on how the airline community was affected by the oncoming of the now widespread pandemic, Covid-19. 
-Types of Variables: 
+
+### Description 
+This airlines data is from the Bureau of Transportation Statistics. The BTS is part of the Department of Transportation and is the main source of data on many different transportation factors such as commercial aviation, transportation economics, and freight activity. The data provided on this website is collected from the Bureau’s National Transportation Library, which contains many different publications and information about the transportation community. We chose this dataset because it provides valuable information on how the airline community was affected by the oncoming of the now widespread pandemic, Covid-19. \
+
+### Basic Information about Dataset: 
  
 year(int) - year of flight
 month(string) - month of flight  
 Total Domestic Flights Operated(int) - total number of flights operated that month/year 
-airline(string) - airline brand 
+airline(string) - airline brand \
  
 Issues about dataset: Since there is limited information in this dataset, we will have to manipulate some variables using the information we have to analyze the data further and make stronger conclusions. Additional variables will include numerical variables such as the percent change in number of flights from each month in 2019 and 2020.  
