--- a/Airlines_Final_Project.Rmd
+++ b/Airlines_Final_Project.Rmd
@@ -46,10 +46,11 @@ my_data$JetBlue <- as.numeric(my_data$JetBlue)
 my_data$Southwest <- as.numeric(my_data$Southwest)
 my_data$Spirit <- as.numeric(my_data$Spirit)
 my_data$United <- as.numeric(my_data$United)
+
+head(my_data)
 ```
 
 Exploratory Analysis 
-
 ```{r}
 #Main Question: How did Covid impact travel and transportation?
 
@@ -75,38 +76,64 @@ ggplot(tot_flight_data, aes(x = year, y = flights)) +
   ggtitle("Bar Graph of Total Flights in First 7 Months 2019 vs. 2020") 
 ```
 
-Using only the first 7 months of the 2019 data to compare its results more accuractely with the first 7 months of the 2020 data, there is still a clear distinctment between the number of flights taken in 2019 vs. 2020. But, since we are using all of our 2020 data, we cannot make any analyses on the effect of the pandemic on travel as travel restrictions began in March. Therefore, we are going to plot the difference in flights before the pandemic began and after the coronavirus pandemic began.
-
-```{r}
-tot_flights_precovid <- sum(my_data['Tot_Flights'][[1]][13:15])
-tot_flights_postcovid <- sum(my_data['Tot_Flights'][[1]][16:19])
-tot_flight_data_2020 <- data.frame("time" = c("Pre-Covid", "Post-Covid"), 
-                              "flights" = c(tot_flights_precovid, tot_flights_postcovid))
-ggplot(tot_flight_data_2020, aes(fct_inorder(time), flights)) +
-  geom_bar(stat = "identity", fill='dodgerblue1') +
-  ggtitle("Bar Graph of Total Flights PreCovid vs. PostCovid")
-```
-
-Using this data, we can clearly see a big drop in flights once the
-widespread pandemic started. The number of flights dropped by
-almost half. Travel bans started all over the world during this
-time, therefore, this data makes sense as more restrictions were
-placed, and people from the U.S. weren't able to travel outside the country to these different places anymore. Next, we will take a look at the month by month number of flights, to see if we can extract any additional information about how travel was affected due to the pandemic.
+Using only the first 7 months of the 2019 data to compare its results more accuractely with the first 7 months of the 2020 data, there is still a clear distinctment between the number of flights taken in 2019 vs. 2020. But, since we are using all of our 2020 data, we cannot make any analyses on the effect of the pandemic on travel as travel restrictions began in March. Therefore, we are going to plot the pattern of flights taken throughout the year of 2020 to analyze the impact.
 
 ```{r}
 data_2020 <- my_data[my_data$year==2020, ]
-ggplot(data_2020, aes(fct_inorder(month), Tot_Flights)) +
-  geom_bar(stat = "identity", fill='dodgerblue1') +
-  ggtitle("Bar Graph of Total Flights in 2020") 
+ggplot(data_2020, aes(fct_inorder(month), Tot_Flights,group=1)) +
+  geom_line(color ='dodgerblue1') +
+  ggtitle("Line Graph of Total Flights in 2020") + 
+  ylab("Total Flights") + 
+  xlab("Month")
 ```
 
-The bar graph of the total flights of each month in 2020 shows a
-decreasing trend of flights as the year progresses. There is a huge drop in the number of flights between March and April. This is most likely due to the stay at home order starting late March. Although the pandemic started in the US in March, the large amount of flights that month is most likely due to the many people flying back home to be with their families during this time. Around June, the number of flights slowly start to increase, but not to the level that it was at the beginning of the year. People may have been starting to get more lax about the virus and visitations, but travel is still greatly affected as the flights have cut down. Let us see how this affected each airline industry.
+Using this graph, we can clearly see a big drop in flights from March to April. One can assume  from this drop that the pandemic most likely played a role in the decrease of flights. Around <ay, the number of flights slowly start to increase, but not to the level that it was at the beginning of the year. Let us see how the pattern of the number of coronavirus cases in the United States affected the travel pattern. 
+
+```{r}
+df_jan_cases <-  df_case %>% 
+  filter(date == "2020-01-29")
+jan_cases <- sum(df_jan_cases$cases)
+df_feb_cases <-  df_case %>% 
+  filter(date == "2020-02-29")
+feb_cases <- sum(df_feb_cases$cases) - sum(df_jan_cases$cases)
+df_mar_cases <-  df_case %>% 
+  filter(date == "2020-03-29")
+mar_cases <- sum(df_mar_cases$cases) - sum(df_feb_cases$cases)
+df_apr_cases <-  df_case %>% 
+  filter(date == "2020-04-29")
+apr_cases <- sum(df_apr_cases$cases) - sum(df_mar_cases$cases)
+df_may_cases <-  df_case %>% 
+  filter(date == "2020-05-29")
+may_cases <- sum(df_may_cases$cases) - sum(df_apr_cases$cases)
+df_jun_cases <-  df_case %>% 
+  filter(date == "2020-06-29")
+jun_cases <- sum(df_jun_cases$cases) - sum(df_may_cases$cases)
+df_jul_cases <-  df_case %>% 
+  filter(date == "2020-07-29") 
+jul_cases <- sum(df_jul_cases$cases) - sum(df_jun_cases$cases)
+
+month_cases <- c(jan_cases, feb_cases, mar_cases, apr_cases, may_cases, jun_cases, jul_cases)
+
+data_2020 <- cbind(data_2020, month_cases)
+tidydf <- data_2020 %>%
+  mutate(cases =round(100*month_cases/month_cases[4], 2)) %>%
+  mutate(flights = round(100*Tot_Flights/Tot_Flights[4], 2))
+
+tidydf <- tidydf %>% select(month, cases, flights) %>%
+  gather(key = "variable", value = "value", -month)
+
+ggplot(tidydf, aes(fct_inorder(month), value, col = variable, group = variable)) +
+  geom_line() + 
+  ggtitle("Cases vs. Flights") + 
+  xlab("Months")
+```
+
+This graph shows when the coronavirus hit the United States hard, and affected many different factors, one being the airline industry and travel. Although there were cases in January, the number of cases quickly ramped up from March to April, which correlates with the decline in travel. From the graph, it can be seen that around May, although cases were still increasing, travel started to increase again, as people started to most likely relax on restrictions. 
 
 ```{r}
 #See how much percent each airline was affected 
 percent_changes <- c() 
-for (val in 4:length(data_2020)){
+for (val in 4:(length(data_2020)-1)){
   array <- data_2020[val][[1]]
   percent_change <- 
     ((sum(array[1:3]) - sum(array[4:7])) / 
@@ -114,14 +141,14 @@ for (val in 4:length(data_2020)){
   percent_changes <- append(percent_changes, percent_change)
 }
 
-airlines <- c("Alaska","Allegiant", "American", "Delta", "Frontier", 
-              "Hawaiian", "JetBlue", "Southwest", "Spirit", "United")
+airlines <- c("Alaska","Allegiant", "American", "Delta", "Frontier", "Hawaiian", "JetBlue", "Southwest", "Spirit", "United")
 
 ggplot(data.frame(airlines, percent_changes), 
        aes(reorder(airlines, -percent_changes), percent_changes)) +
   geom_bar(stat = "identity", fill='dodgerblue1') +
   ggtitle("Bar Graph of Percent Decrease for each Airline") + 
-  xlab("Airline")
+  xlab("Airline") + 
+  ylab("Percent Decrease")
 ```
 
 This data shows by how much percent the number of flights in
@@ -134,8 +161,20 @@ for each airline. The airlines that were affected the most were
 JetBlue, Hawaiian, and United. These airlines had at least a 60%
 decline in flights when the pandemic started.
 
-Final Findings on Airline Data: 
+```{r}
+top_drops <- data_2020 %>%
+  select(month, JetBlue, Hawaiian, United, Delta) %>%
+  gather(key = "variable", value = "value", -month)
+ggplot(top_drops, aes(fct_inorder(month), value, group = variable)) + 
+  geom_line(aes(color = variable), size = 1) +
+  ggtitle("Top 4 Airline Brands Affected") + 
+  xlab("Month") + 
+  ylab("Flights")
+```
 
+This graph shows the time series data of the top four airline brands affected, taken from the previous graph. The trends stay consistent with the trends that we've been seeing in the previous graphs. 
+
+Final Findings on Airline Data: 
 The most revealing findings from this exploratory data analysis 
 showed a couple of things. Firstly, there was a major decrease
 in flights from the year 2019 to the year 2020. Secondly, the number of flights mainly dropped in April of 2020, correlating with the time that the lockdown started and travel restrictions were placed everywhere. Looking at each airline, there was a decrease of the total number of flights taken for each airline, showing that almost every airline industry was affected by the pandemic. Some airlines had a decrease in flights by more than 60%, showing the intensity of the effect on the airline industry. More than half of their revenue was gone. Overall, in terms of the effect on travel during the coronavirus pandemic, there are clear patterns that show that travel was greatly affected. Airplanes were not a first choice method of transporation anymore, as people were not even travelling in the first place. This major decline in airline transportation and travel in and out of the United States, shows how greatly the pandemic played a role in the decline of the airline industry. 
