--- a/Airlines_Final_Project.Rmd
+++ b/Airlines_Final_Project.Rmd
@@ -76,18 +76,20 @@ ggplot(tot_flight_data, aes(x = year, y = flights)) +
   ggtitle("Bar Graph of Total Flights in First 7 Months 2019 vs. 2020") 
 ```
 
-Using only the first 7 months of the 2019 data to compare its results more accuractely with the first 7 months of the 2020 data, there is still a clear distinctment between the number of flights taken in 2019 vs. 2020. But, since we are using all of our 2020 data, we cannot make any analyses on the effect of the pandemic on travel as travel restrictions began in March. Therefore, we are going to plot the pattern of flights taken throughout the year of 2020 to analyze the impact.
+Using only the first 7 months of the 2019 data to compare its results more accuractely with the first 7 months of the 2020 data, there is still a clear distinctment between the number of flights taken in 2019 vs. 2020. But, since we are using all of our 2020 data, we cannot make any analyses on the effect of the pandemic on travel as travel restrictions began in March. Therefore, we are going to plot the pattern of flights taken throughout last year and this year to analyze the impact.
 
 ```{r}
 data_2020 <- my_data[my_data$year==2020, ]
-ggplot(data_2020, aes(fct_inorder(month), Tot_Flights,group=1)) +
-  geom_line(color ='dodgerblue1') +
-  ggtitle("Line Graph of Total Flights in 2020") + 
-  ylab("Total Flights") + 
-  xlab("Month")
+
+ggplot(my_data, aes(fct_inorder(month), Tot_Flights, col = year, group = year)) +
+  geom_line() + 
+  geom_point() + 
+  ggtitle("Line Graph of Total Flights by Months") + 
+  xlab("Month") + 
+  ylab("Total Flights")
 ```
 
-Using this graph, we can clearly see a big drop in flights from March to April. One can assume  from this drop that the pandemic most likely played a role in the decrease of flights. Around <ay, the number of flights slowly start to increase, but not to the level that it was at the beginning of the year. Let us see how the pattern of the number of coronavirus cases in the United States affected the travel pattern. 
+Using this graph, we can clearly see a big drop in flights from March to April of 2020. One can assume from this drop that the pandemic most likely played a role in the decrease of flights. Around May, the number of flights slowly start to increase, but not to the level that it was at the beginning of the year, as can be seen by the comparison to the flights taken in May of 2019. Even though flight frequency increased, it is still greatly decreased from the regular frequency of flights. Let us see how the pattern of the number of coronavirus cases in the United States affected the travel pattern. 
 
 ```{r}
 df_jan_cases <-  df_case %>% 
@@ -122,10 +124,25 @@ tidydf <- data_2020 %>%
 tidydf <- tidydf %>% select(month, cases, flights) %>%
   gather(key = "variable", value = "value", -month)
 
-ggplot(tidydf, aes(fct_inorder(month), value, col = variable, group = variable)) +
-  geom_line() + 
-  ggtitle("Cases vs. Flights") + 
-  xlab("Months")
+p1 <- ggplot() +
+  geom_line(data = data_2020, aes(x=fct_inorder(month), y=Tot_Flights, group=1),color="#69b3a2") + 
+  geom_point(size = 4) + 
+  theme(axis.text.x=element_text(angle=60, hjust=1))+
+  theme_light()+
+  ggtitle("Total Flights in 2020 in the US") + 
+  xlab("Month") + 
+  ylab("Total Flights")
+
+p2<- ggplot() +
+  geom_line(data = data_2020 , aes(x=fct_inorder(month), y=month_cases, group=1),color="orange") + 
+  geom_point(size = 4) + 
+  theme(axis.text.x=element_text(angle=60, hjust=1))+
+  theme_light()+
+  ggtitle("COVID cases per Month in US") + 
+  xlab("Month") + 
+  ylab("Total Cases")
+
+ggarrange(p1,p2,nrow=2)
 ```
 
 This graph shows when the coronavirus hit the United States hard, and affected many different factors, one being the airline industry and travel. Although there were cases in January, the number of cases quickly ramped up from March to April, which correlates with the decline in travel. From the graph, it can be seen that around May, although cases were still increasing, travel started to increase again, as people started to most likely relax on restrictions. 
@@ -167,6 +184,7 @@ top_drops <- data_2020 %>%
   gather(key = "variable", value = "value", -month)
 ggplot(top_drops, aes(fct_inorder(month), value, group = variable)) + 
   geom_line(aes(color = variable), size = 1) +
+  geom_point() + 
   ggtitle("Top 4 Airline Brands Affected") + 
   xlab("Month") + 
   ylab("Flights")
