--- a/07-conclusion.Rmd
+++ b/07-conclusion.Rmd
@@ -1,2 +1,3 @@
 # Conclusion
 
+One of the limitations for the airline data was that it did not have data in 2020 for the months of August to November, and therefore, we could not make further analyses about the impact of the pandemic past July. From all the graphs, there was one common theme that the pandemic definitely had the biggest impact on the airline industry from March to April.  In the future, we would like to explore how the airline industry changed to accomodate for the pandemic, such as intense cleaning before flight boarding, less passengers per flight, and much more. We would like to learn what precautions are being taken to change for the state of the world and for people's safety. Additionally, tracking how many people actually got the coronavirus from taking flights is also crucial information in one determining whether they want to board a flight or not. Data analysis on this information will provide useful insights for the citizens of the world, and aim to help them make an informed decision on whether they prefer to travel or not. 
