--- a/04-missing.Rmd
+++ b/04-missing.Rmd
@@ -1,6 +1,10 @@
 # Missing values
 
 Describe any patterns you discover in missing values.
+```{r}
+library(mi)
+```
+
 
 ## Country Policy Orders: 
 ```{r}
